New git push automated task. fixed share action and improved welcome page and logo

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 	
 	<body aurelia-app="main">
 		<div class="w3-card-4">
-			<header class="w3-container w3-blue">
+			<header class="w3-container w3-text-white seecoderun-blue">
 			  	<h1>Let's have some fun =]</h1>
 			</header>
 			<div class = "w3-container">
 				<div class="splash">
 					<div class="logo">
-				       <i class="material-icons md-giant">chevron_left</i>
-				       <i class="material-icons md-giant">cloud</i>
-				       <i class="material-icons md-giant">play_circle_outline</i>
-				       <i class="material-icons md-giant">chevron_right</i>
+				       <i class="material-icons md-giant seecoderun-text-blue">chevron_left</i>
+				       <i class="material-icons md-giant seecoderun-text-blue">cloud</i>
+				       <i class="material-icons md-giant seecoderun-text-blue">play_circle_outline</i>
+				       <i class="material-icons md-giant seecoderun-text-blue">chevron_right</i>
 			    	</div>
-			    	<div class="spinner-box">
+			    	<div class="spinner-box seecoderun-text-blue">
 			    		<i class="fa fa-spinner fa-spin"></i>
 			    	</div>
-					<div class="title">
+					<div class="title seecoderun-text-blue">
 						SeeCode.Run
 					</div>
 				</div>
 			</div>
-			<footer class="w3-container w3-blue">
+			<footer class="w3-container  w3-text-white seecoderun-blue">
 				  <h5>&copy; George Mason University, 2016</h5>
 			</footer>
 		</div>
