--- a/src/share/share-box.html
+++ b/src/share/share-box.html
@@ -1,11 +1,9 @@
 <template bindable="share">
 <require from = "./share-box.css"></require>
-   <div id="shareDiv" class= "dropdown-menu">
-        <div class='w3-row w3-color-blue'>
-              <header>Share Your SeeCode.Run Pastebin</header>
-        </div>
-        <div class='w3-row'>
-          <input type="text" class="w3-container w3-threequarter" id="copyTarget" value.bind="pastebinIdshare"><button type=" w3-row w3-button" class="btn btn-primary" id="copyButton">Copy</button>
+   <div id="shareDiv" >
+            <div id = "shareTitle" class="w3-label  w3-center">Pastebin URL </div>
+            <input type="text" class="w3-input  w3-hover-light-grey w3-leftbar w3-rightbar" id="copyTarget" value.bind="pastebinIdshare"> 
+            <i id="copyButton" class="material-icons">content_copy</i>
         </div>
    </div>
 </template>
