--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
 			<div class = "w3-container">
 				<div class="splash">
 					<div class="logo">
-				       <i class="material-icons md-giant seecoderun-text-blue">chevron_left</i>
-				       <i class="material-icons md-giant seecoderun-text-blue">cloud</i>
-				       <i class="material-icons md-giant seecoderun-text-blue">play_circle_outline</i>
-				       <i class="material-icons md-giant seecoderun-text-blue">chevron_right</i>
+						<!--chevron_left-->
+				       <i class="material-icons md-giant seecoderun-text-blue">&#xE5CB;</i>
+				       <!--cloud-->
+				       <i class="material-icons md-giant seecoderun-text-blue">&#xE2BD;</i>
+				       <!--play_circle_outline-->
+				       <i class="material-icons md-giant seecoderun-text-blue">&#xE039;</i>
+				       <!--chevron_right-->
+				       <i class="material-icons md-giant seecoderun-text-blue">&#xE5CC;</i>
+				       <!--find_replace &#xE881;-->
 			    	</div>
 			    	<div class="spinner-box seecoderun-text-blue">
 			    		<i class="fa fa-spinner fa-spin"></i>
