--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,3 +1,3 @@
 <template bindable="htmlEditor">
-	<div id="aceHtmlEditorDiv" style="height: 700px"></div>
+	<pre id="aceHtmlEditorDiv"></pre>
 </template>
