--- a/src/jsEditor/js-editor.html
+++ b/src/jsEditor/js-editor.html
@@ -1,3 +1,3 @@
 <template bindable="jsEditor">
-	<div id="aceJsEditorDiv" style="height: 700px"></div>
+	<pre id="aceJsEditorDiv"></pre>
 </template>
