--- a/src/jsGutter/js-gutter.html
+++ b/src/jsGutter/js-gutter.html
@@ -1,4 +1,4 @@
 <template bindable="jsGutter">
 <require from="./js-gutter.css"></require>
-	 <div id="gutter" class= "js-gutter" ></div>
+	 <div id="jsGutter" class= "js-gutter" ></div>
 </template>
