--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="styles/split.js.css" />
 		<link rel="stylesheet" href="styles/firepad-user-list.css" />
 		<link rel="stylesheet" href="styles/styles.css">
-		
+
 		<link rel="stylesheet" href="styles/index.css" />
-		
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	
+
 	<body aurelia-app="main">
 		<div class="w3-card-4">
 			<header class="w3-container w3-text-white seecoderun-blue">
@@ -44,17 +44,18 @@
 				  <h5>&copy; George Mason University, 2016</h5>
 			</footer>
 		</div>
-	
+
 		<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
 		<script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
 		<script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"></script>
-		
+
 		<script src="include/pure-js-pre-loader.js"></script>
 		<script src="include/split.js"></script>
-		
+		<script src="include/run_prettify.js"></script>
+
 		<script src="jspm_packages/system.js"></script>
 		<script src="config.js"></script>
-	
+
 		<script>
 			System.import('aurelia-bootstrapper');
 		</script>
