--- a/src/htmlEditor/html-editor.html
+++ b/src/htmlEditor/html-editor.html
@@ -1,3 +1,3 @@
 <template bindable="htmlEditor">
-	<pre id="aceHtmlEditorDiv"></pre>
+	<pre id.bind="htmlEditor.aceHtmlEditorDiv"></pre>
 </template>
