--- a/src/userList/user-list.html
+++ b/src/userList/user-list.html
@@ -1,3 +1,3 @@
-<template>
-    <div id="userlist"></div>
+<template bindable = "userList">
+    <div id="userlist" class="seecoderun-user-list"></div>
 </template>
