Fixed js-gutter splitter clickable area and handle cursor. Fixed #125. Modified styling and logic for vis-viewer. Improved Visualization UI layout and style

--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -6,18 +6,18 @@
         <div id="tracePlayerPanelBody" class="panel-body">
             <div class="btn-toolbar" role="toolbar" aria-label="play menu">
                 <div class="btn-group" role="group" aria-label="play buttons">
-                    <button class="btn btn-default btn-primary" id="prev" title="Previous">
+                    <button class="w3-btn btn-default btn-primary" id="prev" title="Previous">
                         <span class='glyphicon glyphicon-backward'></span>
                     </button>
-                    <button class="btn btn-success" id="play" title="Auto-Play or pause the collected trace">
+                    <button class="w3-btn btn-success" id="play" title="Auto-Play or pause the collected trace">
                         <span class='glyphicon glyphicon-play'></span>
                     </button>
-                    <button class="btn btn-primary" id="next" title="Next">
+                    <button class="w3-btn btn-primary" id="next" title="Next">
                         <span class='glyphicon glyphicon-forward'></span>
                     </button>
                 </div>
                 <div class="btn-group" role="group" aria-label="hide or show info">
-                    <button class="btn btn-warning" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Info">
+                    <button class="w3-btn btn-warning" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Info">
                         <span class='glyphicon glyphicon-eye-open'></span>
                     </button>
                 </div>
