--- a/src/traceSearch/trace-search.html
+++ b/src/traceSearch/trace-search.html
@@ -4,12 +4,12 @@
     <div class="panel-heading" data-toggle="collapse" href="#traceSearchPanelBody">
             <span class='glyphicon glyphicon-search'></span>Trace Search
     </div>
-    <div id="traceSearchPanelBody" class="panel-body">
+    <div id="traceSearchPanelBody" class="panel-body  container-fluid">
       <div class="w3-row-padding">
-        <div class="w3-quarter">
+        <div id="searchFilterW3NoPaddingLeft" class="w3-col" style="width:100px">
           <label  for = "searchFilter" class="w3-label seecoderun-text-blue">Filter By</label>
           <select class="w3-select w3-hover-light-grey"  name="searchFilter" id="searchFilter" value.bind="traceSearch.selectedFilter" change.trigger="traceSearch.filterChanged()">
-            <option selected disabled class="w3-text-blue" >select a filter</option>
+            <option disabled class="w3-text-blue" >select a filter</option>
             <option>${traceSearch.options.none}</option>
             <option>${traceSearch.options.any}</option>
             <option>${traceSearch.options.id}</option>
@@ -18,14 +18,14 @@
         </div>
         <div class="w3-rest">
           <label for = "searchTerm" class="w3-label seecoderun-text-blue">Search Term</label>
-          <input id="searchTerm"  type="text" class="w3-input  w3-hover-light-grey" name="searchTerm"  placeholder="" input.delegate="traceSearch.keyPressed()" value.bind="traceSearch.searchedValue" list = "filteredOptions"> 
-          <label for = "searchTerm" class="w3-label w3-text-grey" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">Matches: <span class="w3-badge w3-green">${traceSearch.numberOfResult}</span></label>
+          <input id="searchTerm"  type="text" class="w3-input  w3-hover-light-grey" name="searchTerm"  placeholder="" input.delegate="traceSearch.keyPressed()" value.bind="traceSearch.searchedValue" list = "filteredOptions">
+          <label id="searchTermHitCount" for = "searchTerm" class="w3-label w3-text-grey" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">Matches: <span class="w3-badge w3-green">${traceSearch.numberOfResult}</span></label>
             <datalist id="filteredOptions" >
-               <option repeat.for="row of traceSearch.filteredOptions" innerHTML.bind="row"></option> 
+               <option repeat.for="row of traceSearch.filteredOptions" innerHTML.bind="row"></option>
             </datalist>
         </div>
       </div>
-    <div class="container-fluid" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">
+    <div class="w3-row-padding" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">
       <a id="link" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut()" ></a>
       <table class="table table-striped table-bordered">
         <thead>
@@ -36,20 +36,17 @@
         </thead>
         <tbody>
           <tr repeat.for="row of traceSearch.rows" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut({$index})" class="table-hover"
-            id="link" click.delegate="traceSearch.doOnClickJumpToCode({$index})"> 
+            id="link" click.delegate="traceSearch.doOnClickJumpToCode({$index})">
             <td innerHTML.bind="row.id"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
             <td innerHTML.bind="row.value"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
           </tr>
         </tbody>
       </table>
     </div>
-    <div class=" container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div if.bind="traceSearch.noResult" class="alert alert-danger" role="alert" innerHTML.bind="traceSearch.errorMessage"></div>
-          <div if.bind="traceSearch.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="traceSearch.suggestionMessage"></div>
-        </div>
-      </div>
+    <div class="w3-row-padding">
+      <div if.bind="traceSearch.noResult" class="alert alert-danger" role="alert" innerHTML.bind="traceSearch.errorMessage"></div>
+      <div if.bind="traceSearch.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="traceSearch.suggestionMessage"></div>
+    </div>
     </div>
   </div>
   </div>
