--- a/src/visualization/visualization.html
+++ b/src/visualization/visualization.html
@@ -1,10 +1,13 @@
 <template bindable="visualization">
-  <div class="visualization-title">${visualization.title}</div>
-  <div if.bind="visualization.hasError" class="alert alert-danger" role="alert">${visualization.errorMessage}</div>
-  <div if.bind="visualization.type === 'DataTable'">
-    Highlight the expression you would like to add to the table and click 'Add Column'.
-    <br/>
-    <button type="button" class="btn btn-default" click.trigger="visualization.requestSelectionRange()">Add Column</button>
+  <div id="${visualization.id}">
+    <div class="visualization-title">${visualization.title}</div>
+    <div if.bind="visualization.hasError" class="alert alert-danger" role="alert">${visualization.errorMessage}</div>
+    <div if.bind="visualization.type === 'DataTable'">
+      <label for = "${visualization.buttonId}" class="w3-label seecoderun-text-blue">
+        Select expressions in the editor and tap 'Add Column'.
+      </label>
+      <button id="${visualization.buttonId}" type="button" class="w3-btn seecoderun-blue" click.trigger="visualization.requestSelectionRange()">Add Column</button>
+    </div>
+    <div id="${visualization.contentId}"></div>
   </div>
-  <div id="${visualization.type}"></div>
 </template>
