Fixed tabs added. Resolved UI layout problems. Added jquery-ui images folder for build and deployment.

--- a/src/consoleWindow/console-window.html
+++ b/src/consoleWindow/console-window.html
@@ -5,6 +5,7 @@
             <li repeat.for = "output of console.log"  class= "${output.styleClass}" innerhtml.bind="output.content">
             </li>
         </ul>
+        <div id="console-window-footer-fill"></div>
         <div class= "console-window-footer">
             <label>${console.title}</label>
             <span class = 'glyphicon glyphicon-console'></span>
