--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <template>
+<!--<require from="jquery-ui/themes/smoothness/jquery-ui.css"></require>-->
 <require from="bootstrap/css/bootstrap.css"></require>
 <require from="font-awesome/css/font-awesome.css"></require>
 <require from="layout/navigationBar/navigation-bar.html"></require>
@@ -8,6 +9,6 @@
   <div class="page-host">
     <router-view></router-view>
   </div>
-  
+
 </template>
- 
+
