--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -19,7 +19,7 @@
     <div id = "main-splitter-left"  class = "split split-horizontal container-fluid">
       <ul id = "codeTabs" class = "nav nav-tabs" role = "tablist">
         <li id =  "jsTab" class = "active" role = "tab" aria-controls = "js-container">
-          <a href = "#js-container" data-toggle = "tab">JS</a></li>
+          <a href = "#js-container" data-toggle = "tab">Javascript</a></li>
         <li id =  "htmlTab" role = "tab" aria-controls = "html-container">
           <a href = "#html-container" data-toggle = "tab">HTML</a></li>
         <li id =  "cssTab" role = "tab" aria-controls = "css-container">
@@ -31,7 +31,6 @@
             <div id = "js-editor-code" class = "w3-half">
               <js-editor js-editor.bind = "jsEditor"></js-editor>
             </div>
-            <!--<span class = 'glyphicon glyphicon-edit'></span>-->
             <div id = "js-editor-trace-gutter" class = "w3-rest">
               <js-gutter js-gutter.bind = "jsGutter"></js-gutter>
             </div>
@@ -53,13 +52,11 @@
           <ul id = "reviewTabs" class = "nav nav-tabs" role = "tablist">
             <li id = "previewTab" class = "active" role = "tab" aria-controls = "preview">
               <a href = "#preview" data-toggle = "tab">
-                <!--<span class = 'glyphicon glyphicon-globe'></span>-->
                 Output
               </a>
             </li>
             <li id = "visualizationTab" role = "tab" aria-controls = "visualization-container">
               <a href = "#visualization-container"  data-toggle = "tab">
-                <!--<span class = 'glyphicon glyphicon-tasks'></span>-->
                 Debug
               </a>
             </li>
