--- a/index.html
+++ b/index.html
@@ -106,11 +106,13 @@
 				bar.animate(1);
 		</script>
 
-		<script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-		<script src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"></script>
-		<script src="https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"></script>
+		<!--src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"-->
+		<script src="include/firebase.js"></script>
+		<!--src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js"-->
+		<script src="include/ace.js"></script>
+		<!--"https://cdn.firebase.com/libs/firepad/1.3.0/firepad.js"-->
+		<script src="include/firepad.js"></script>
 
-		<script src="include/pure-js-pre-loader.js"></script>
 		<script src="include/split.js"></script>
 		<script src="include/run_prettify.js"></script>
 
