Added new markers. Initial editor tooltip template

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 		<div id = "progressbar"></div>
 		<footer class="w3-container  w3-text-white seecoderun-blue">
-			  <h5>&copy; George Mason University, 2016</h5>
+			  <h5>&#169; George Mason University, 2016</h5>
 		</footer>
 
 		<script src="include/progressbar.min.js"></script>
