--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -1,7 +1,7 @@
 <template bindable="tracePlay">
     <div class="panel panel-default">
         <div class="panel-heading" data-toggle="collapse" href="#tracePlayerPanelBody">
-            <span class='glyphicon glyphicon-play-circle'></span>Trace Player
+            <span class='glyphicon glyphicon-play-circle'></span>&#160;Trace Player
         </div>
         <div id="tracePlayerPanelBody" class="panel-body">
             <div class="btn-toolbar" role="toolbar" aria-label="play menu">
