--- a/src/traceSearch/trace-search.html
+++ b/src/traceSearch/trace-search.html
@@ -2,7 +2,7 @@
   <require from = "./trace-search.css"></require>
   <div class="panel panel-default">
     <div class="panel-heading" data-toggle="collapse" href="#traceSearchPanelBody">
-            <span class='glyphicon glyphicon-search'></span>Trace Search
+            <span class='glyphicon glyphicon-search'></span>&#160;Trace Search
     </div>
     <div id="traceSearchPanelBody" class="panel-body  container-fluid">
       <div class="w3-row-padding">
