--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -3,7 +3,7 @@
     <require from="visualization/visualization.html"></require>
     <div class="panel panel-default">
         <div class="panel-heading" data-toggle="collapse" href="#seePanelBody">
-                <span class='glyphicon glyphicon-dashboard'></span>Visualizations
+                <span class='glyphicon glyphicon-dashboard'></span>&#160;Visualizations
         </div>
         <div id="seePanelBody" class="panel-body container-fluid">
             <div class="w3-row-padding" show.bind="visViewer.isChecked" class="add-vis">
