Debug panel style added from Bootstrap template

--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -1,5 +1,5 @@
 <template bindable="tracePlay">
-    <div class="panel panel-default">
+    <div class="panel panel-debug">
         <div class="panel-heading" data-toggle="collapse" href="#tracePlayerPanelBody">
             <span class='glyphicon glyphicon-play-circle'></span>&#160;Trace Player
         </div>
