--- a/src/traceSearch/trace-search.html
+++ b/src/traceSearch/trace-search.html
@@ -1,6 +1,6 @@
 <template bindable="traceSearch">
   <require from = "./trace-search.css"></require>
-  <div class="panel panel-default">
+  <div class="panel panel-debug">
     <div class="panel-heading" data-toggle="collapse" href="#traceSearchPanelBody">
             <span class='glyphicon glyphicon-search'></span>&#160;Trace Search
     </div>
