--- a/src/chat/chat.html
+++ b/src/chat/chat.html
@@ -1,7 +1,7 @@
 <template bindable="chat">
 <require from="./chat.css"></require>
   <div id="chatDiv" class="seecoderun-chat" >
-    <header><span class='glyphicon glyphicon-comment'></span>Chat</header>
+    <header><span class='glyphicon glyphicon-comment'></span>&#160;Chat</header>
     <div id = 'chatToolbar' class='seecoderun-chat-toolbar'>
       <label for="chatUserNameInput">Username:</label>
       <input type='text' id='chatUserNameInput' placeholder='Enter Your Username...'>
