--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -1,7 +1,7 @@
 <template bindable="visViewer">
   <require from = "./vis-viewer.css"></require>
     <require from="visualization/visualization.html"></require>
-    <div class="panel panel-default">
+    <div class="panel panel-debug">
         <div class="panel-heading" data-toggle="collapse" href="#seePanelBody">
                 <span class='glyphicon glyphicon-dashboard'></span>&#160;Visualizations
         </div>
