Adds new Debug panels logic. Now the panels heading works as toolbars and expand on demand . Fixes #137

--- a/src/pastebin/pastebin.html
+++ b/src/pastebin/pastebin.html
@@ -65,7 +65,7 @@
             <div id = "preview" class = "tab-pane fade in active" role = "tabpanel" aria-labelledby="previewTab">
               <html-viewer></html-viewer>
             </div>
-            <div id = "visualization-container" class = "tab-pane fade container-fluid"  role = "tabpanel" aria-labelledby="visualizationTab">
+            <div id = "visualization-container" class = "tab-pane fade"  role = "tabpanel" aria-labelledby="visualizationTab">
               <play tracePlay.bind = "tracePlay"></play>
               <trace-search trace-search.bind = "traceSearch"></trace-search>
               <vis-viewer vis-viewer.bind = "visViewer"></vis-viewer>
