--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -1,10 +1,10 @@
 <template bindable="tracePlay">
-    <div class="panel panel-debug">
-        <div class="panel-heading" data-toggle="collapse" href="#tracePlayerPanelBody">
-            <span class='glyphicon glyphicon-play-circle'></span>&#160;Trace Player
-        </div>
-        <div id="tracePlayerPanelBody" class="panel-body">
-            <div class="btn-toolbar" role="toolbar" aria-label="play menu">
+    <div id = "play-toolbar" class="panel panel-debug">
+        <div class="panel-heading w3-row-padding" role="toolbar" aria-label="play menu">
+            <div class="w3-col panel-heading-title" style="width:115px">
+                <span class="glyphicon glyphicon-play-circle"></span>&#160;Trace Player
+            </div>
+            <div class="btn-toolbar w3-rest">
                 <div class="btn-group" role="group" aria-label="play buttons">
                     <button class="w3-btn btn-default btn-primary" id="prev" title="Previous">
                         <span class='glyphicon glyphicon-backward'></span>
