--- a/src/traceSearch/trace-search.html
+++ b/src/traceSearch/trace-search.html
@@ -1,53 +1,51 @@
 <template bindable="traceSearch">
   <require from = "./trace-search.css"></require>
   <div class="panel panel-debug">
-    <div class="panel-heading" data-toggle="collapse" href="#traceSearchPanelBody">
+    <div class="panel-heading w3-row-padding">
+      <div id = "traceSearchPanelHeading" class="w3-col  panel-heading-title" style="width:115px" data-toggle="collapse" href="#traceSearchPanelBody">
             <span class='glyphicon glyphicon-search'></span>&#160;Trace Search
+
+      </div>
+      <div class="w3-col" style="width:95px">
+        <select class="w3-select w3-hover-light-grey"  name="searchFilter" id="searchFilter" value.bind="traceSearch.selectedFilter" change.trigger="traceSearch.filterChanged()">
+          <option disabled="true" selected="true" >Filter by</option>
+          <option>${traceSearch.options.none}</option>
+          <option>${traceSearch.options.any}</option>
+          <option>${traceSearch.options.id}</option>
+          <option>${traceSearch.options.value}</option>
+        </select>
+      </div>
+      <div class="w3-rest">
+        <input id="searchTerm"  type="text" class="w3-input  w3-hover-light-grey" name="searchTerm"  placeholder="Search Term" input.delegate="traceSearch.keyPressed()" value.bind="traceSearch.searchedValue" list = "filteredOptions">
+          <datalist id="filteredOptions" >
+             <option repeat.for="row of traceSearch.filteredOptions" innerHTML.bind="row"></option>
+          </datalist>
+      </div>
     </div>
     <div id="traceSearchPanelBody" class="panel-body  container-fluid">
-      <div class="w3-row-padding">
-        <div id="searchFilterW3NoPaddingLeft" class="w3-col" style="width:100px">
-          <label  for = "searchFilter" class="w3-label seecoderun-text-blue">Filter By</label>
-          <select class="w3-select w3-hover-light-grey"  name="searchFilter" id="searchFilter" value.bind="traceSearch.selectedFilter" change.trigger="traceSearch.filterChanged()">
-            <option disabled="true" selected="true" >Select a filter</option>
-            <option>${traceSearch.options.none}</option>
-            <option>${traceSearch.options.any}</option>
-            <option>${traceSearch.options.id}</option>
-            <option>${traceSearch.options.value}</option>
-          </select>
-        </div>
-        <div class="w3-rest">
-          <label for = "searchTerm" class="w3-label seecoderun-text-blue">Search Term</label>
-          <input id="searchTerm"  type="text" class="w3-input  w3-hover-light-grey" name="searchTerm"  placeholder="" input.delegate="traceSearch.keyPressed()" value.bind="traceSearch.searchedValue" list = "filteredOptions">
-          <label id="searchTermHitCount" for = "searchTerm" class="w3-label w3-text-grey" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">Matches: <span class="w3-badge w3-green">${traceSearch.numberOfResult}</span></label>
-            <datalist id="filteredOptions" >
-               <option repeat.for="row of traceSearch.filteredOptions" innerHTML.bind="row"></option>
-            </datalist>
-        </div>
+      <div class="w3-row-padding" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">
+        <label id="searchTermHitCount" for = "searchResults" class="w3-label w3-text-grey" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">Matches: <span class="w3-badge w3-green">${traceSearch.numberOfResult}</span></label>
+        <a id="link" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut()" ></a>
+        <table id = "searchResults" class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Id</th>
+              <th>Value</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr repeat.for="row of traceSearch.rows" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut({$index})" class="table-hover"
+              id="link" click.delegate="traceSearch.doOnClickJumpToCode({$index})">
+              <td innerHTML.bind="row.id"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
+              <td innerHTML.bind="row.value"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
+            </tr>
+          </tbody>
+        </table>
       </div>
-    <div class="w3-row-padding" if.bind="!traceSearch.noResult && !traceSearch.noSearchYet">
-      <a id="link" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut()" ></a>
-      <table class="table table-striped table-bordered">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Value</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr repeat.for="row of traceSearch.rows" mouseover.delegate="traceSearch.doMouseOver({$index})" mouseout.delegate="traceSearch.doMouseOut({$index})" class="table-hover"
-            id="link" click.delegate="traceSearch.doOnClickJumpToCode({$index})">
-            <td innerHTML.bind="row.id"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
-            <td innerHTML.bind="row.value"><a href="#link" click.delegate="traceSearch.doOnClickHighlight({$index})"></a></td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="w3-row-padding">
+        <div if.bind="traceSearch.noResult" class="alert alert-danger" role="alert" innerHTML.bind="traceSearch.errorMessage"></div>
+        <div if.bind="traceSearch.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="traceSearch.suggestionMessage"></div>
+      </div>
     </div>
-    <div class="w3-row-padding">
-      <div if.bind="traceSearch.noResult" class="alert alert-danger" role="alert" innerHTML.bind="traceSearch.errorMessage"></div>
-      <div if.bind="traceSearch.noSearchYet" class="alert alert-info" role="alert" innerHTML.bind="traceSearch.suggestionMessage"></div>
-    </div>
-    </div>
-  </div>
   </div>
 </template>
