--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -1,23 +1,23 @@
 <template bindable="visViewer">
-  <require from = "./vis-viewer.css"></require>
+      <require from = "./vis-viewer.css"></require>
     <require from="visualization/visualization.html"></require>
     <div class="panel panel-debug">
-        <div class="panel-heading" data-toggle="collapse" href="#seePanelBody">
-                <span class='glyphicon glyphicon-dashboard'></span>&#160;Visualizations
-        </div>
-        <div id="seePanelBody" class="panel-body container-fluid">
-            <div class="w3-row-padding" show.bind="visViewer.isChecked" class="add-vis">
-                <div class="w3-col" style="width:200px">
-                    <select id="visViewerSelect" class="w3-select w3-hover-light-grey" change.trigger="visViewer.onSelectChange($event, $index)">
+        <div class="panel-heading w3-row-padding">
+            <div id ="seePanelHeading" class="w3-col panel-heading-title" style="width:115px" data-toggle="collapse" href="#seePanelBody">
+               <span class='glyphicon glyphicon-dashboard'></span>&#160;Visualizations
+            </div>
+            <div class="w3-col" style="width:200px">
+                <select id="visViewerSelect" class="w3-select w3-hover-light-grey" change.trigger="visViewer.onSelectChange($event, $index)">
                      <option disabled="true" selected="true" class="w3-text-blue" >Select a visualization type</option>
                      <option repeat.for="type of visViewer.visualizationTypes" value.bind="type.value">${type.name}</option>
-                    </select>
-                </div>
-                <div class="w3-col" style="width:100px">
-                    <button type="button" class="w3-btn seecoderun-blue" click.trigger="visViewer.addVisualization()">Add Visualization</button>
-                </div>
+                </select>
             </div>
-            <div class="w3-row-padding">
+            <div class="w3-col" style="width:100px">
+                <button type="button" class="w3-btn btn-primary" click.trigger="visViewer.addVisualization()">Add Visualization</button>
+            </div>
+        </div>
+        <div id="seePanelBody" class="panel-body container-fluid">
+            <div class="w3-row-padding" if.bind="visViewer.visualizations.length">
                 <div class="vis-container" repeat.for="visualization of visViewer.visualizations">
                     <visualization visualization.bind="visualization"></visualization>
                 </div>
