--- a/src/visualization/visualization.html
+++ b/src/visualization/visualization.html
@@ -6,7 +6,7 @@
       <label for = "${visualization.buttonId}">
         Select expressions in the editor and tap 'Add Column'.
       </label>
-      <button id="${visualization.buttonId}" type="button" class="w3-btn btn-primary" click.trigger="visualization.requestSelectionRange()">Add Column</button>
+      <button id="${visualization.buttonId}" type="button" class="btn btn-default" click.trigger="visualization.requestSelectionRange()">Add Column</button>
     </div>
     <div id="${visualization.contentId}"></div>
   </div>
