--- a/src/tracePlay/play.html
+++ b/src/tracePlay/play.html
@@ -4,20 +4,20 @@
             <div class="w3-col panel-heading-title" style="width:115px">
                 <span class="glyphicon glyphicon-play-circle"></span>&#160;Trace Player
             </div>
-            <div class="btn-toolbar w3-rest">
+            <div class="btn-toolbar w3-col" style="width:170px">
                 <div class="btn-group" role="group" aria-label="play buttons">
-                    <button class="w3-btn btn-default btn-primary" id="prev" title="Previous">
+                    <button class="btn btn-default btn-primary" id="prev" title="Previous">
                         <span class='glyphicon glyphicon-backward'></span>
                     </button>
-                    <button class="w3-btn btn-success" id="play" title="Auto-Play or pause the collected trace">
+                    <button class="btn btn-success" id="play" title="Auto-Play or pause the collected trace">
                         <span class='glyphicon glyphicon-play'></span>
                     </button>
-                    <button class="w3-btn btn-primary" id="next" title="Next">
+                    <button class="btn btn-primary" id="next" title="Next">
                         <span class='glyphicon glyphicon-forward'></span>
                     </button>
                 </div>
                 <div class="btn-group" role="group" aria-label="hide or show info">
-                    <button class="w3-btn btn-warning" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Info">
+                    <button class="btn btn-warning" id="remove" data-toggle="tooltip" data-placement="top" title="Hide Info">
                         <span class='glyphicon glyphicon-eye-open'></span>
                     </button>
                 </div>
