--- a/src/visViewer/vis-viewer.html
+++ b/src/visViewer/vis-viewer.html
@@ -13,14 +13,17 @@
                 </select>
             </div>
             <div class="w3-col" style="width:100px">
-                <button type="button" class="w3-btn btn-primary" click.trigger="visViewer.addVisualization()">Add Visualization</button>
+                <button type="button" class="btn btn-primary" click.trigger="visViewer.addVisualization()">Add Visualization</button>
             </div>
         </div>
-        <div id="seePanelBody" class="panel-body container-fluid">
+        <div id="seePanelBody" class="panel-body container-fluid collapse in">
             <div class="w3-row-padding" if.bind="visViewer.visualizations.length">
                 <div class="vis-container" repeat.for="visualization of visViewer.visualizations">
                     <visualization visualization.bind="visualization"></visualization>
                 </div>
+            </div>
+            <div class="w3-row-padding" if.bind="!visViewer.visualizations.length">
+                <div class="alert alert-info" role="alert" innerHTML.bind="visViewer.noSelectionMessage"></div>
             </div>
         </div>
     </div>
