--- a/src/navigationBar/navigation-bar.html
+++ b/src/navigationBar/navigation-bar.html
@@ -25,7 +25,7 @@
 		      </a>
 		    </div>
 			<ul id="navbar-collapse-1" class="nav navbar-nav navbar-right" >
-		        <li>
+		        <li id = "shareListItem">
 		          <div>
 		          	<div id="shareBox">
 		            	<share-box shareBox.bind="shareBox"></share-box>
