--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 		<script src="include/split.js"></script>
 		<script src="include/run_prettify.js"></script>
 
+		<script src="include/collapsible-lists.js"></script>
+
 		<script src="jspm_packages/system.js"></script>
 		<script src="config.js"></script>
 		<script>
