Treeview: fixed initial object validation. Fixed array leaf as string. autolog stores DOM elements now. History Viewer moved to  action bar.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="navigation-bar" class="container-fluid">
 			<nav class="navbar-xs navbar " role="navigation">
 				<div class="navbar-header">
-			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
+			      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-right">
 			        <span class='glyphicon glyphicon-menu-hamburger'></span>
 			      </button>
 			      <a class="navbar-brand">
@@ -37,7 +37,7 @@
 				    </div>
 			      </a>
 			    </div>
-				<ul id="navbar-collapse-1" class="nav navbar-nav navbar-right" >
+				<ul id="navbar-collapse-right" class="nav navbar-nav navbar-right" >
 			        <li>
 			          <div>
 			          	<span id="shareButton">
