fixes class attribute error

--- a/src/historyViewer/history-viewer.html
+++ b/src/historyViewer/history-viewer.html
@@ -4,7 +4,7 @@
         <div class ="w3-col" style="width:150px">
             <input name="slider" id="historySlider" type="range" min="1" max="50" value="1" step="1" />
         </div>
-        <div ="w3-rest">
+        <div class="w3-rest">
             <!--file_download-->
             <i id = "historyChangeButton" class="material-icons">&#xE2C4;</i>
         </div>
